Fix z-index toogle > topbar

--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -3,7 +3,7 @@
 .toggle-open {
    @include position(fixed, 4rem, null, null, 3rem, null, null);
    cursor: pointer;
-   z-index: 5;
+   z-index: 1000;
    
    span:nth-child(1){
     @include toggleSpans($orange, 3rem, .3rem, null );
@@ -19,7 +19,7 @@
 .toggle-close {
    @include position(fixed, 4rem, null, null, 3rem, null, null);
    cursor: pointer;
-   z-index: 5;
+   z-index: 1000;
    right: 1.5rem;
    
    span:nth-child(1){
